<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/adminHomeFragment"
        android:icon="@drawable/kc_home"
        android:title="Home" />

    <item
        android:id="@+id/adminOrdersFragment"
        android:icon="@drawable/kc_myorders"
        android:title="Orders" />

    <item
        android:id="@+id/adminMenuFragment"
        android:icon="@drawable/kc_menu"
        android:title="Menu" />

    <item
        android:id="@+id/adminFeedbackFragment"
        android:icon="@drawable/kc_feedback"
        android:title="Feedback" />

    <item
        android:id="@+id/adminCampaignStudioFragment"
        android:icon="@drawable/kc_studio"
        android:title="Studio" />

</menu>