...
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/adminNavHost"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/adminBottomNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adminTopBar"
        app:navGraph="@navigation/admin_nav_graph" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
...
